--- a/fashion.html
+++ b/fashion.html
@@ -55,10 +55,15 @@ body {
 <div class="dropdown" style="float:left;">
   <button class="dropbtn">Menu</button>
   <div class="dropdown-content" style="left:0;">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="#">Home</a>
+    <a href="#">Totes</a>
+    <a href="#">About us</a>
   </div>
 </div>
 </body>
+
+<style>
+<header>
+     body {
+          background:white
 </html>
