--- a/fashion.html
+++ b/fashion.html
@@ -56,7 +56,7 @@ body {
   <button class="dropbtn">Menu</button>
   <div class="dropdown-content" style="left:0;">
     <a href="#">Home</a>
-    <a href="#">Totes</a>
+    <a href="#">Clothes</a>
     <a href="#">About us</a>
   </div>
 </div>
@@ -65,5 +65,9 @@ body {
 <style>
 <header>
      body {
-          background:white
+          background:white;
+     }
+     <h1>name</h1>
+</header>          
+               
 </html>
